Align with latest Paper and JDK